Added local storage functions

--- a/index.html
+++ b/index.html
@@ -31,64 +31,7 @@
       <div data-wr class="d-flex flex-wrap"></div>
     </div>
     <div data-modalWr class="modal hidden">
-      <div data-modalContent class="modal__content">
-        <h4 class="text-center mb-4">Create new cat</h4>
-        <form name="createCatForm">
-          <div class="mb-3">
-            <input
-              type="number"
-              class="form-control"
-              name="id"
-              placeholder="Id"
-            />
-          </div>
-
-          <div class="mb-3">
-            <input
-              type="text"
-              class="form-control"
-              name="name"
-              placeholder="Name"
-            />
-          </div>
-
-          <div class="mb-3">
-            <input
-              type="number"
-              class="form-control"
-              name="age"
-              placeholder="Age"
-            />
-          </div>
-
-          <div class="mb-3">
-            <input
-              type="text"
-              class="form-control"
-              name="description"
-              placeholder="Description"
-            />
-          </div>
-
-          <div class="mb-3">
-            <input
-              type="text"
-              class="form-control"
-              name="image"
-              placeholder="Image url"
-            />
-          </div>
-
-          <div class="mb-3">
-            <input type="range" name="rate" min="1" max="10" />
-          </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" name="favorite" />
-            <label class="form-check-label" for="exampleCheck1">Favorite</label>
-          </div>
-          <button type="submit" class="btn btn-primary">Add</button>
-        </form>
-      </div>
+      <div data-modalContent class="modal__content"></div>
     </div>
   </body>
 </html>
